--- a/src/Sequence.Api/wwwroot/public/index.html
+++ b/src/Sequence.Api/wwwroot/public/index.html
@@ -8,6 +8,9 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <title>Sequence</title>
+  <script>
+    env = %REACT_APP_ENV%;
+  </script>
 </head>
 
 <body>
