Change the way .env variables work in index.html

--- a/src/Sequence.Api/wwwroot/public/index.html
+++ b/src/Sequence.Api/wwwroot/public/index.html
@@ -17,7 +17,7 @@
   </noscript>
   <div id="root"></div>
   <script>
-    env = %REACT_APP_ENV%;
+    window.env = JSON.parse('%REACT_APP_ENV%');
   </script>
 </body>
 
