Disable user scaling

--- a/src/wwwroot/public/index.html
+++ b/src/wwwroot/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="%REACT_APP_WWW_URL%/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta name="theme-color" content="#000000">
   <meta name="Description"
     content="An open source implementation of the board game 'One-Eyed Jack' a.k.a. 'Sequence®'.">
