--- a/src/wwwroot/public/index.html
+++ b/src/wwwroot/public/index.html
@@ -10,6 +10,14 @@
     content="An open source implementation of the board game 'One-Eyed Jack' a.k.a. 'Sequence®'.">
   <link rel="manifest" href="%REACT_APP_WWW_URL%/manifest.json">
   <title>One-Eyed Jack</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151345611-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-151345611-1');
+  </script>
 </head>
 
 <body>
